--- a/index.html
+++ b/index.html
@@ -485,6 +485,6 @@
 				}
 			}
 		</script>
-		<script type="module" src="src/js/buildMain.js"></script>
+		<script type="module" src="src/js/main_loader.js"></script>
 	</body>
 </html>
