--- a/index.html
+++ b/index.html
@@ -97,9 +97,7 @@
 					<div class="tutorialBackground">
 						<div class="tutorialTitle">How To Play MooMoo Warrior?</div>
 						<ol style="margin: 0; padding-left: 22px">
-							<li class="tutorialText">Install a <a href="https://www.tampermonkey.net" target="_blank">browser extension</a> that supports userscripts</li>
-							<li class="tutorialText">Download and enable <a href="./moomoowarrior.user.js" target="_blank">this userscript</a></li>
-							<li class="tutorialText">Navigate to <a href="https://moomoo.io" target="_blank">MooMoo.io</a> and play MooMoo Warrior</li>
+							<!-- Se han eliminado las 3 líneas del tutorial que pediste quitar -->
 						</ol>
 					</div>
 				</div>
