--- a/index.html
+++ b/index.html
@@ -32,7 +32,6 @@
 		<link rel="stylesheet" href="src/css/menu.css" />
 		<link rel="stylesheet" href="src/css/error.css" />
 		<link rel="stylesheet" href="src/css/credits.css" />
-		<link rel="stylesheet" href="src/css/tutorial.css" />
 		<link rel="stylesheet" href="src/css/skins.css" />
 		<link rel="stylesheet" href="src/css/room.css" />
 		<link rel="stylesheet" href="src/css/lobby.css" />
@@ -70,7 +69,7 @@
 			<div id="creditsBackButton" class="backButton redButton">Back</div>
 		</div>
 
-		<div id="menuContainer" class="blackScreen" style="display: none">
+		<div id="menuContainer" class="blackScreen">
 			<div class="container">
 				<div id="gameNameContainer">
 					<div id="gameName">MooMoo</div>
@@ -88,24 +87,6 @@
 			<div id="playerConfigContainer">
 				<div id="chooseSkinButton" style="display: none"></div>
 				<div id="fullScreenButton" class="material-icons" onclick="toggleFullScreen()">&#xE5D0;</div>
-			</div>
-		</div>
-
-		<div id="tutorialContainer" class="blackScreen" style="display: block">
-			<div class="container">
-				<div id="tutorialWindow" class="window">
-					<div class="tutorialBackground">
-						<div class="tutorialTitle">How To Play MooMoo Warrior?</div>
-						<ol style="margin: 0; padding-left: 22px">
-							<!-- Se han eliminado las 3 líneas del tutorial que pediste quitar -->
-						</ol>
-					</div>
-				</div>
-			</div>
-
-			<div id="linkContainer">
-				<a id="changelogLink" href="" target="_blank">Changelog</a> | <a href="" id="discordLink" target="_blank">Discord</a> |
-				<a id="creditsLink">Credits</a>
 			</div>
 		</div>
 
